fix full screen on iOS

--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -2,7 +2,7 @@
   position: relative;
   height: 100%;
   width: 100%;
-  min-height: 100vh;
+  // min-height: 100vh;
   overflow: hidden;
 }
 
